--- a/public/css/teacherCourse.css
+++ b/public/css/teacherCourse.css
@@ -48,6 +48,7 @@ body {
   z-index: 100;
   overflow-y: auto;
   box-shadow: 2px 0 10px var(--shadow);
+  margin-top: -70px;
 }
 
 .sidebar-header {
